피드 생성 API 연결+마이페이지 내 피드 출력

--- a/final-pjt-front/index.html
+++ b/final-pjt-front/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MMM</title>
+
+    <!-- Bootstrap CSS CDN -->
+    <!-- <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-XNxgoTWAwfnpzEeLjD2DHTzMbKmdwVv7QtZ0Uo/1FQXKduKOU6NZmBh2epPlL6g8"
+      crossorigin="anonymous"
+    /> -->
+
+    <!-- Custom Stylesheet -->
+    <link rel="stylesheet" href="/src/assets/styles/custom.css" />
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Diphylleia&family=Moirai+One&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <div id="app"></div>
+
+    <!-- Bootstrap JS CDN -->
+    <!-- <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-qQ1JiDF1F1T7WehDWXQn5RTHtyBZGsm4ix+JtKJTo+khlS9kfuv5GAfj9diyt6FY"
+      crossorigin="anonymous"
+    ></script> -->
+
+    <!-- Vue App -->
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
