--- a/final-pjt-front/index.html
+++ b/final-pjt-front/index.html
@@ -6,29 +6,19 @@
     <title>MMM</title>
 
     <!-- Bootstrap CSS CDN -->
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-XNxgoTWAwfnpzEeLjD2DHTzMbKmdwVv7QtZ0Uo/1FQXKduKOU6NZmBh2epPlL6g8"
-      crossorigin="anonymous"
-    /> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="/src/assets/styles/custom.css" />
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Diphylleia&family=Moirai+One&display=swap" rel="stylesheet">
-
+  
+    <link href="https://fonts.cdnfonts.com/css/minecraft-4" rel="stylesheet">              
+    <link href="https://fonts.cdnfonts.com/css/public-pixel" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
 
     <!-- Bootstrap JS CDN -->
-    <!-- <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-qQ1JiDF1F1T7WehDWXQn5RTHtyBZGsm4ix+JtKJTo+khlS9kfuv5GAfj9diyt6FY"
-      crossorigin="anonymous"
-    ></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <!-- Vue App -->
     <script type="module" src="/src/main.js"></script>
